--- a/main/kafka/docker-compose.yaml
+++ b/main/kafka/docker-compose.yaml
@@ -1,20 +1,21 @@
-version: '3'
 
 services:
   app:
     build:
-      context: ..
+      context: ../
       dockerfile: kafka/Dockerfile
     volumes:
       - ../src:/app/src
       - ../proto:/app/proto
       - ../oauth:/app/oauth
+      - ../config:/app/config
     environment:
       - GOOGLE_APPLICATION_CREDENTIALS=/app/oauth/google/credentials.json
-    depends_on:
-      - kafka
+    ports:
+      - "8080:8080"
+
   zookeeper:
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:7.3.0
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -22,14 +23,13 @@ services:
       - "2181:2181"
 
   kafka:
-    image: confluentinc/cp-kafka:latest
+    image: confluentinc/cp-kafka:7.3.0
     depends_on:
       - zookeeper
-    ports:
-      - "9092:9092"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    ports:
+      - "9092:9092"
