--- a/main/kafka/docker-compose.yaml
+++ b/main/kafka/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
       - "8080:8080"
 
   zookeeper:
-    image: confluentinc/cp-zookeeper:7.3.0
+    image: confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -23,7 +23,7 @@ services:
       - "2181:2181"
 
   kafka:
-    image: confluentinc/cp-kafka:7.3.0
+    image: confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
     environment:
