--- a/main/config/docker-compose.yaml
+++ b/main/config/docker-compose.yaml
@@ -2,8 +2,8 @@
 services:
   app:
     build:
-      context: ../
-      dockerfile: kafka/Dockerfile
+      context: ..
+      dockerfile: Dockerfile
     volumes:
       - ../src:/app/src
       - ../proto:/app/proto
